tests/baselines/reference/asyncGenerators.functionExpression.16.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/functionExpressions/asyncGenerators.functionExpression.16.es5.ts(2,10): error TS1109: Expression expected.


==== tests/cases/conformance/asyncGenerators/es5/functionExpressions/asyncGenerators.functionExpression.16.es5.ts (1 errors) ====
    const f = async function * () {
        await;
             ~
!!! error TS1109: Expression expected.
    }